Worked on Gun templates and views, tested pages

--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<h1>About</h1>
+<p>This site catalogs firearms featured in Resident Evil games as well as their real life counterparts.</p>
+{% endblock %}
