--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<h1>Resident Evil Gunshop</h1>
+<p>A repository of Resident Evil weapons and their real-life counterparts!</p>
+{% endblock %}
