Added image support, search bar and polished visuals

--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -1,6 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>About</h1>
-<p>This site catalogs firearms featured in Resident Evil games as well as their real life counterparts.</p>
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <div class="card shadow-sm p-4">
+            <h2 class="mb-3">About This Project</h2>
+            <p>
+                This web application catalogs firearms featured in the
+                Resident Evil franchise and compares them with their
+                real-world counterparts.
+            </p>
+            <p>
+                Built with Django and PostgreSQL as part of a web development project.
+            </p>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
