--- a/templates/guns/gun_form.html
+++ b/templates/guns/gun_form.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>{{ title }}</h1>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <div class="card p-4 shadow-sm">
 
-<a href="{% url 'gun_list' %}">Back to all guns</a>
+            <h2 class="mb-4">{{ title }}</h2>
+
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-danger">Save</button>
+                <a href="{% url 'gun_list' %}" class="btn btn-secondary ms-2">Cancel</a>
+            </form>
+
+        </div>
+    </div>
+</div>
+
 {% endblock %}
