--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="text-center py-5">
@@ -13,4 +14,7 @@
     </a>
 </div>
 
+<div class="text-center my-4">
+    <img src="{% static 'images/hunk.webp' %}" class="img-fluid rounded border-0">
+</div>
 {% endblock %}
